--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --foreground-rgb: 0, 0, 0;
+    --background-rgb: 214, 219, 220;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --foreground-rgb: 0, 0, 0;
+        --background-rgb: 214, 219, 220;
+    }
+}
+
+body {
+    color: rgb(var(--foreground-rgb));
+    background: rgb(var(--background-rgb));
+}
+
+@layer utilities {
+    .text-balance {
+        text-wrap: balance;
+    }
+}
